fix a couple of memory leaks in DOM inspector's PNG encoder, and clean up the interface a little.

b=208704, r=biesi/caillon, sr=jst